style: fix mobile nav issues with alignment, display and font-size

--- a/src/components/Molecules/FeatureCard.module.scss
+++ b/src/components/Molecules/FeatureCard.module.scss
@@ -11,41 +11,45 @@
     transform: translateY(-8px);
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
   }
+  .imageWrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .overlay {
+      position: absolute;
+      bottom: 0;
+      max-width: 100%;
+      min-height: 110px;
+      padding: 1rem;
+      backdrop-filter: grayscale(90%);
+      background: rgba(99, 158, 97, 0.95);
+      color: white;
+      text-align: left;
+      @media (max-width: 768px)  {
+        min-height: 70px;
+      }
+      .title {
+        font-size: clamp(0.8rem, 3vw, 1.25rem);
+        font-weight: 700;
+        margin: 0 0 0.5rem;
+      }
+      
+      .description {
+        font-size: clamp(0.7rem, 2.5vw, 0.95rem);
+        line-height: 1.6;
+        color: white;
+        margin: 0;
+      }
+    }
+  }
 }
 
-.imageWrapper {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
 
-img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
 
-.overlay {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  padding: 1rem;
-  backdrop-filter: grayscale(90%);
-  background: rgba(99, 158, 97, 0.95);
-  color: white;
-  text-align: left;
-}
 
-.title {
-  font-size: clamp(0.8rem, 3vw, 1.25rem);
-  font-weight: 700;
-  margin: 0 0 0.5rem;
-}
-
-.description {
-  font-size: clamp(0.6rem, 2vw, 0.95rem);
-  line-height: 1.6;
-  color: white;
-  margin: 0;
-}
