--- a/src/components/Organisms/Navbar.module.scss
+++ b/src/components/Organisms/Navbar.module.scss
@@ -9,12 +9,15 @@
 }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 1rem 2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 1rem 2rem;
+  @media (max-width: 1100px){
+
+  }
 }
 
 .navLinks {
@@ -23,6 +26,7 @@
   list-style: none;
 
   li {
+    font-size: clamp(1rem, 2vw, 2.5rem);
     color: #4b5563;
     font-weight: 500;
     cursor: pointer;
@@ -33,7 +37,7 @@
     }
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 1100px) {
     display: none;
   }
 }
@@ -42,7 +46,7 @@
   display: flex;
   gap: 1rem;
 
-  @media (max-width: 768px) {
+  @media (max-width: 1100px) {
     display: none;
   }
 }
@@ -54,17 +58,25 @@
   font-size: 1.5rem;
   cursor: pointer;
   color: #111827;
+  transition: 0.5s;
+  &:hover {
+    scale: (1.3);
+  }
 
-  @media (max-width: 768px) {
+  @media (max-width: 1100px) {
     display: block;
   }
 }
 
 .mobileMenu {
+  display: none;
   padding: 1.5rem 2rem;
   background: white;
+  text-align: right;
   border-top: 1px solid #e5e7eb;
-
+   @media (max-width: 1100px) {
+    display: block;
+  }
   ul {
     list-style: none;
     margin-bottom: 1.5rem;
@@ -72,19 +84,14 @@
     li {
       padding: 0.75rem 0;
       color: #4b5563;
+      font-size: clamp(1.5rem, 3vw, 2rem);
       font-weight: 500;
       cursor: pointer;
       border-bottom: 1px solid #f3f4f6;
 
       &:hover {
-        color: #10b981;
+        color: var.$button-primary-1;
       }
     }
   }
-}
-
-.mobileAuthButtons {
-  display: flex;
-  flex-direction: column;
-  gap: 0.75rem;
 }
